--- a/HTML/D3_Transitions.html
+++ b/HTML/D3_Transitions.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,162 +14,180 @@
 	</head>
 	<body>
 		<h1>Transitions with D3</h1>
-	<div>
-	<button class="btn_1"  id="btn_1" onclick="update()"> Update </button>
-	<button class="btn_2"  id="btn_2" onclick="triggerTransition1()"> Transition: #1 </button>
-	<button class="btn_3"  id="btn_3" onclick="triggerTransition2()"> Transition: #2 </button>
-	</div>
+		<div>
+			<button class="btn_1" id="btn_1" onclick="update()">Update</button>
+			<button class="btn_2" id="btn_2" onclick="triggerTransition1()">
+				Transition: #1
+			</button>
+			<button class="btn_3" id="btn_3" onclick="triggerTransition2()">
+				Transition: #2
+			</button>
+		</div>
 
+		<script>
+			var w = 500;
+			var h = 200;
+			var maxValue = 25;
+			var dataset = [14, 5, 26, 23, 9, 15, 25, 12, 8, 9, 6, 27, 30];
 
-	<script>
+			var xScale = d3
+				.scaleBand()
+				.domain(d3.range(dataset.length))
+				.rangeRound([0, w])
+				.paddingInner(0.05);
 
-	var w = 500;
-  	var h = 200;
-	var maxValue = 25;
-  	var dataset = [14,5,26,23,9,15,25,12,8,9,6,27,30];
+			var yScale = d3
+				.scaleLinear()
+				.domain([0, d3.max(dataset)])
+				.range([0, h]);
 
-	var xScale = d3.scaleBand()
-				   .domain(d3.range(dataset.length))
-				   .rangeRound([0,w])
-				   .paddingInner(0.05);
+			var barPadding = 2;
+			var svg = d3
+				.select("body")
+				.append("svg")
+				.attr("width", w)
+				.attr("height", h);
 
-	var yScale = d3.scaleLinear()
-				   .domain([0, d3.max(dataset)])
-				   .range([0, h]);
+			svg.selectAll("rect")
+				.data(dataset)
+				.enter()
+				.append("rect")
+				.attr("x", function (d, i) {
+					return xScale(i);
+				})
+				.attr("y", function (d) {
+					return h - yScale(d);
+				})
+				.attr("width", xScale.bandwidth())
+				.attr("fill", function (d) {
+					return "rgb(0, 0, " + Math.round(d * 10) + ")";
+				})
+				.attr("height", function (d) {
+					return yScale(d);
+				});
 
-	var barPadding = 2;
-  	var svg = d3.select("body")
-              .append("svg")
-              .attr("width", w)
-              .attr("height", h);
+			svg.selectAll("text")
+				.data(dataset)
+				.enter()
+				.append("text")
+				.text(function (d) {
+					return d;
+				})
+				.attr("text-anchor", "middle")
+				.attr("x", function (d, i) {
+					return xScale(i) + xScale.bandwidth() / 2;
+				})
+				.attr("y", function (d) {
+					return h - yScale(d) + 14;
+				})
+				.attr("font-family", "sans-serif")
+				.attr("font-size", "11px")
+				.attr("fill", "white");
 
+			//On click, update with new data
+			d3.select("#btn_1").on("click", function () {
+				var numValues = dataset.length;
 
+				dataset = [];
 
-
-    svg.selectAll("rect")
-    .data(dataset)
-    .enter()
-    .append("rect")
-    .attr("x", function(d,i){return xScale(i);})
-    .attr("y", function(d){return h - yScale(d);})
-    .attr("width", xScale.bandwidth())
-    .attr("fill", function(d) { return "rgb(0, 0, " + Math.round(d*10) + ")";})
-    .attr("height", function(d){return yScale(d)});
-
-	svg.selectAll("text")
-		.data(dataset)
-		.enter()
-		.append("text")
-		.text(function(d){return d;})
-		.attr("text-anchor", "middle")
-		.attr("x", function(d,i) {
-			return xScale(i) + xScale.bandwidth() /2;})
-		.attr("y", function(d) {return h - yScale(d) +14;})
-		.attr("font-family", "sans-serif")
-		.attr("font-size", "11px")
-		.attr("fill", "white");
-
-		//On click, update with new data
-		d3.select("#btn_1")
-		    .on("click", function() {
-		        var numValues = dataset.length;
-
-						dataset = [];
-
-						for (var i = 0; i < numValues; i++) {
-							var newNumber = Math.floor(Math.random()*maxValue);
-							dataset.push(newNumber);
-						}
-		        svg.selectAll("rect")
-		           .data(dataset)
-							 .transition()
-							 .delay(function(d, i){
-								 return i/dataset.length * 1000;
-							 })
-							 .ease(d3.easeCircleIn)
-		           .attr("y", function(d) {
-		                return h - yScale(d);
-		           })
-		           .attr("height", function(d) {
-		                return yScale(d);
-		           });
-
-							 svg.selectAll("text")
-   				 		.data(dataset)
-   						.text(function(d) {return d;})
-   						.attr("y", function(d) {
-        			return h - yScale(d) + 14;});
-						});
-
-				d3.select("#btn_2")
-					.on("click", function() {
-						var numValues = dataset.length;
-
-								dataset = [];
-
-								for (var i = 0; i < numValues; i++) {
-									var newNumber = Math.floor(Math.random()*maxValue);
-									dataset.push(newNumber);
-								}
+				for (var i = 0; i < numValues; i++) {
+					var newNumber = Math.floor(Math.random() * maxValue);
+					dataset.push(newNumber);
+				}
 				svg.selectAll("rect")
 					.data(dataset)
-								.transition()
-								.delay(function(d, i){
-									return i/dataset.length * 1000;
-								})
-								.ease(d3.easeCircleOut)
-					.attr("y", function(d) {
+					.transition()
+					.delay(function (d, i) {
+						return (i / dataset.length) * 1000;
+					})
+					.ease(d3.easeCircleIn)
+					.attr("y", function (d) {
 						return h - yScale(d);
 					})
-					.attr("height", function(d) {
+					.attr("height", function (d) {
 						return yScale(d);
 					});
 
 				svg.selectAll("text")
 					.data(dataset)
-					.text(function(d) {return d;})
-					.attr("y", function(d) {
-					return h - yScale(d) + 14;});
+					.text(function (d) {
+						return d;
+					})
+					.attr("y", function (d) {
+						return h - yScale(d) + 14;
+					});
+			});
+
+			d3.select("#btn_2").on("click", function () {
+				var numValues = dataset.length;
+
+				dataset = [];
+
+				for (var i = 0; i < numValues; i++) {
+					var newNumber = Math.floor(Math.random() * maxValue);
+					dataset.push(newNumber);
+				}
+				svg.selectAll("rect")
+					.data(dataset)
+					.transition()
+					.delay(function (d, i) {
+						return (i / dataset.length) * 1000;
+					})
+					.ease(d3.easeCircleOut)
+					.attr("y", function (d) {
+						return h - yScale(d);
+					})
+					.attr("height", function (d) {
+						return yScale(d);
 					});
 
-				d3.select("#btn_3")
-					.on("click", function() {
-						var numValues = dataset.length;
-							dataset = [];
-							for (var i = 0; i < numValues; i++) {
-								var newNumber = Math.floor(Math.random()*maxValue);
-								dataset.push(newNumber);
-							}
-						svg.selectAll("rect")
-							.data(dataset)
-							.transition()
-							.delay(function(d, i){
-								return i/dataset.length * 1000;
-							})
-							.ease(d3.easeElasticOut)
-							.attr("y", function(d) {
-								return h - yScale(d);
-							})
-							.attr("height", function(d) {
-								return yScale(d);
-							});
+				svg.selectAll("text")
+					.data(dataset)
+					.text(function (d) {
+						return d;
+					})
+					.attr("y", function (d) {
+						return h - yScale(d) + 14;
+					});
+			});
 
-						svg.selectAll("text")
-							.data(dataset)
-							.text(function(d) {return d;})
-							.attr("y", function(d) {
-							return h - yScale(d) + 14;});
-						});
+			d3.select("#btn_3").on("click", function () {
+				var numValues = dataset.length;
+				dataset = [];
+				for (var i = 0; i < numValues; i++) {
+					var newNumber = Math.floor(Math.random() * maxValue);
+					dataset.push(newNumber);
+				}
+				svg.selectAll("rect")
+					.data(dataset)
+					.transition()
+					.delay(function (d, i) {
+						return (i / dataset.length) * 1000;
+					})
+					.ease(d3.easeElasticOut)
+					.attr("y", function (d) {
+						return h - yScale(d);
+					})
+					.attr("height", function (d) {
+						return yScale(d);
+					});
 
-
-	</script>
-	<br/>
-	<br/>
-	<footer style="color:grey">
-		<p>Bernard Joshua Raja Rajan</p>
-		<p>COS30045 Data Visualisation</p>
-		<a href="D3_Adding_And_Removing.html"> Go To: Lab 5.3</a>
-	</footer>
-
-</body>
+				svg.selectAll("text")
+					.data(dataset)
+					.text(function (d) {
+						return d;
+					})
+					.attr("y", function (d) {
+						return h - yScale(d) + 14;
+					});
+			});
+		</script>
+		<br />
+		<br />
+		<footer>
+			<p>Bernard Joshua Raja Rajan</p>
+			<p>COS30045 Data Visualisation</p>
+			<a href="D3_Adding_And_Removing.html"> Go To: Lab 5.3</a>
+		</footer>
+	</body>
 </html>
